# rogue_like_rpg

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_CONCEPT.md  CLAUDE.md  DEV_JOURNAL.md  PROJECT_OVERVIEW.md  README.md  REFACTORING_PLAN.md  ROADMAP.md  bootstrap.py  config.py  game_context.py  game_states.py  main.py  pyproject.toml  requirements.txt  test_fov_perf.py
.Jules/: palette.md
.gemini/: settings.json
.jules/: bolt.md  palette.md
.planning/: MILESTONES.md  MILESTONE_4_AUDIT.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.1-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md  v1.4-MILESTONE-AUDIT.md  v1.6-MILESTONE-AUDIT.md
components/: camera.py
config/: __init__.py  colors.py  debug.py  enums.py  game.py  ui.py
controllers/: __init__.py  input_controller.py  render_pipeline.py  turn_orchestrator.py
core/: camera.py  ecs.py  input_manager.py  registry.py  rng.py  visibility_service.py  world_clock_service.py
docs/: CONTENT_GUIDE.md  DEV_JOURNAL.md  REFACTORING_PLAN.md  ROADMAP.md  hotbar_refactoring_walkthrough.md
ecs/: components.py  world.py
entities/: entity_factory.py  entity_registry.py  hero.py  item_factory.py  item_registry.py  monster.py  player.py  schedule_registry.py
game/: components.py
map/: map_container.py  map_generator_utils.py  map_layer.py  tile.py  tile_registry.py
services/: consumable_service.py  content_database.py  dialogue_service.py  equipment_service.py  game_input_handler.py  input_manager.py  interaction_resolver.py  map_generator.py  map_service.py  map_transition_service.py  (+10 more)
(+492 files in other folders)
